--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!doctype html>
 <html>
-	
+	<title>That Title Site Though</title>	
+	<head></head>
+	<body style="background-color:black;color:white;">
+		<h1>What's Up Y'all?!</h1>
+		<p>Lorem ipsum dolor sit amet, no ius quidam dissentias interpretaris, eu duo ubique salutandi. Quo albucius deleniti perpetua ei, at saperet laboramus vis, per diam affert patrioque ne. Te ius assum praesent patrioque. Mucius causae vel cu, vix commune gloriatur theophrastus an. Suas affert civibus in his. Eirmod veritus sea et, sale nemore maiorum et duo.</p>
+	</body>
 </html>
